--- a/css/comunicaciones.css
+++ b/css/comunicaciones.css
@@ -1,17 +1,28 @@
   .card{
      width: 15rem;
   }
-
+  .noticias-card{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
   
+  .noticias-card .card-text{
+    padding-top: 5px;
+  }
+
 @media only screen and (max-width: 600px) {
     .card{
-     width: 42%;
+     width: 46%;
      align-items: center;
      text-align:center;
-     margin: 5px;
-     margin-right: 15px;
+     margin: 0px;
+     margin-right: 10px;
   }
   .card-mobile{
     display: none;
+  }
+
+  .noticias-card .card-text{
+    padding-left: 5px;
   }
 }
