--- a/css/master.css
+++ b/css/master.css
@@ -42,9 +42,16 @@
    /* Funcionarios */
   .funcionarios {
     color: white!important;
-    font-size: 14px;
+    font-size: 15px;
+    margin-right: 20px;
+    font-weight: 500;
+   
   }
-
+  /* Buscar */
+  .buscar{
+    font-size: 15px;
+    color: white;
+  }
   .ver-mas{
     font-weight: bold;
     margin-top: -8px;
@@ -113,8 +120,8 @@
 
   .covid {
     background: var(--color_4_blue);
-    right: 0; 
-    margin-left: 40px;
+    position: relative;
+        margin-left: 50px;
   } 
 
   .dropdown-menu {
@@ -395,6 +402,11 @@
      .card-text {
       font-size: 16px;
       padding-top: 10px;
+    }
+    /* Link funcionarios */
+
+    .funcionarios{
+      border: 1px solid pink;
     }
 
     .noticia-mobile{
