--- a/css/master.css
+++ b/css/master.css
@@ -169,10 +169,7 @@
   }
 
   .carousel-control-next-icon {
-    background-image: url(
-      data:image/svg + xml,
-      %3csvgxmlns="http://www.w3.org/2000/svg"fill="%23fff"viewBox="0 0 8 8"%3e%3cpathd="M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z"/%3e%3c/svg%3e
-    )!important;
+    background-image: url(data:image/svg + xml,%3csvgxmlns="http://www.w3.org/2000/svg"fill="%23fff"viewBox="0 0 8 8"%3e%3cpathd="M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z"/%3e%3c/svg%3e)!important;
   } 
 
  
@@ -235,6 +232,23 @@
     border-bottom: 1px dashed gray;
   }
 
+  /* Redes */
+  .title-redes{
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    text-align: left;
+    margin-left: 20px;
+  }
+  .title-redes span{
+    font-size: 16px;
+    margin-left: 5px;
+  }
+  .title-redes a{
+    text-decoration: none;
+  }
+ 
 
   /*  Links styles */
 
@@ -351,9 +365,56 @@
 
   /* Multimedia */
   .multimedia {
-    background: rgb(231, 231, 231);
+    background: rgb(231, 231, 231); 
+    height: auto;
+    padding: 1px !important; 
    
   }
+  .multimedia .col-sm{
+      text-align: center;
+  }
+  .multimedia .row{
+      padding-left: 0px;
+  }
+  /* Eventos */
+  .multimedia-eventos{
+     background: rgb(241, 241, 241);
+    
+  }
+  .multimedia-facebooklive{
+   
+    background: rgb(231, 231, 231);
+  }
+
+  #eventos .titulo p{
+    font-size: 14px;
+  }
+
+  .instagram{
+      width: 100%; 
+      height: 210px;
+  }
+
+  .envivo_streaming{ 
+    border-radius: 20px; 
+    padding: 5px; 
+    color: white; 
+    font-size: 14px;
+    animation: pulse_vivo 5s infinite;
+  }
+
+  @keyframes pulse_vivo {
+    0% {
+      background-color: #FA3E3E;
+    }
+    100% {
+      background-color: #f92525;
+    }
+  }
+
+
+
+
 
   /* Fixed Footer Responsive */
 
@@ -449,6 +510,12 @@
       margin-left: 0px;
       margin-right: 10px;
     }
+
+      .instagram{
+      width: 95%; 
+      height: 210px;
+      }
+
 
   }
   
