--- a/css/master.css
+++ b/css/master.css
@@ -168,9 +168,10 @@
     height: 5px; 
   }
 
+  /* 
   .carousel-control-next-icon {
     background-image: url(data:image/svg + xml,%3csvgxmlns="http://www.w3.org/2000/svg"fill="%23fff"viewBox="0 0 8 8"%3e%3cpathd="M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z"/%3e%3c/svg%3e)!important;
-  } 
+  }  */
 
  
   /* Banner Rotativo */
@@ -511,10 +512,21 @@
       margin-right: 10px;
     }
 
-      .instagram{
-      width: 95%; 
-      height: 210px;
-      }
+    .instagram{
+    width: 95%; 
+    height: 210px;
+    }
+ 
+      
+    /* Redes */
+    .title-redes{
+      display: inline-block;
+      width: inherit;
+      margin-bottom: 5px;
+      margin-top: inherit;
+      text-align: left;
+      margin-left: 0px;
+    }
 
 
   }
